hphp/test/slow/nameof/variable.php.expectf
Fatal error: `nameof` can only be used with a class in %s/nameof/variable.php on line 6
